--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card Game Score Dashboard</title>
+    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
     <style>
     body {
         font-family: Arial, sans-serif;
